fixed symbol alignment in the hamburger button.

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,3 +26,7 @@ h1 {
   width: 100%;
   height: 400px;
 }
+
+.switch{
+  margin-left: 45%;
+}
